# OpenSprinkler-Firmware

./: .env.example  .gitignore  .gitmodules  ANALOG_SENSOR_API.md  BUILD_GUIDE.md  BUILD_LIBS_README.md  CHANGELOG.md  CMakeLists.txt  CRASH_FIX.md  EMailSender.cpp  EMailSender.h  EMailSenderKey.h  I2CRTC.cpp  LIBRARY_BUILD_SYSTEM.md  LiquidCrystal.cpp  LiquidCrystal.h  MATTER_BLE_RAM_OPTIMIZATION.md  MATTER_INTEGRATION.md  MEMORY_MAP.md  Makefile  OPTIMIZATION_NOTES.md  OSEthernet.h  OSPinger.h  OpenSprinkler.cpp  OpenSprinkler.h  OpenThingsLib  Pinger.h  RCSwitch.cpp  RCSwitch.h  RUNTIME_SWITCHING.md  SSD1306Display.h  Sensor.hpp  SensorBase.hpp  TimeLib.cpp  TimeLib.h  ZIGBEE_CLUSTER_REFERENCE.md  ZIGBEE_REFACTOR.md  ZIGBEE_SENSORS.md  acme_client.cpp  acme_client.h  (+170 more)
.github/: copilot-instructions.md
CHANGELOG/: index.html
ai-programming-pt/: index.html
analog-sensor-config/: index.html
analog-sensor-config-de/: index.html
analog-sensor-config-fr/: index.html
analog-sensor-config-it/: index.html
analog-sensor-config-pt/: index.html
archive-pt/: index.html
docs/: ESP32_C5_PSRAM_MATTER.md  FIRMWARE_SIZE_OPTIMIZATION.md  FIX_HARDWARE_AES_MEMORY.md  QUICKFIX_HARDWARE_AES.md  SPIRAM_16BYTE_OPTIMIZATION.md  TLS13_OPTIMIZATION.md  ZIGBEE_BLE_ARDUINO_MIGRATION.md  mcp_firmware_api.md  mkdocs.yml  sensor-lazy-loading-plan.md
faq-pt/: index.html
fyta-sensors-pt/: index.html
html/: ap_home.html  html2raw.cpp  update.html
index-pt/: index.html
mcp-server-it/: index.html
mcp-server-pt/: index.html
opensprinklerpro/: index.html
ospi-analog/: iic.h  (+8 more)
(+45 files in other folders)
